test/warning.slq
// --run

def main[r:!ℕ](){
	for i in [0..r] { x:=0; } // warning /// warning
	asdf /// error
}
